# cli_reminders

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  shell.nix
src/: __init__.py  app.py
src/commands/: __init__.py  command.py  create.py  send.py
src/helpers/: config.py
src/helpers/tests/: test_config.py
src/notification/: client.py
src/notification/tests/: test_client.py
src/schedule/: client.py
src/schedule/tests/: test_client.py  test_config.py
src/scripts/: __init__.py  create.py  main.py  send_notification.py
