[project]
name = "cli_reminders"
version = "1.0"
description = "Tool for creating & managing reminders through CLI"
readme = "README.md"
requires-python = ">=3.11.9"

  [[project.authors]]
  name = "Christopher Johnstone"

  [[project.authors]]
  name = "Christopher Johnstone"
  email = "chrispjohnstone97@gmail.com"

  [project.scripts]
  remind = "src:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["*tests"]
namespaces = true

[tool.black]
line-length = 80
target-version = ["py311"]
