[project]
name = "cli_reminders"
version = "1.0"
description = "Tool for creating & managing reminders through CLI"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
  "notify-py",
]

  [[project.authors]]
  name = "Christopher Johnstone"

  [[project.authors]]
  name = "Christopher Johnstone"
  email = "chrispjohnstone97@gmail.com"

  [project.scripts]
  remind = "app:main"
  # TODO: Fix script address

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*tests"]
namespaces = true

[tool.black]
line-length = 80
target-version = ["py311"]
